--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_app">
+    package="com.example.buyu">
    <application
-        android:label="my_app"
+        android:label="buyu"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
