--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,14 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v3
         with:
-          java-version: "12.x"
+          distribution: 'temurin'
+          java-version: '17'
       - name: Flutter action
-        uses: subosito/flutter-action@v1.4.0
+        uses: subosito/flutter-action@v2.3.0
         with:
           channel: "stable"
-          flutter-version: "1.22.4"
+          flutter-version: "2.10.2"
       # 下载项目依赖
       - run: flutter pub get
       - run: echo $KEYSTORE | base64 -di > android/app/keystore.jks
@@ -33,7 +34,7 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
       # 发布到 Release
       - name: Release apk
-        uses: ncipollo/release-action@v1.5.0
+        uses: ncipollo/release-action@v1.9.0
         with:
           artifacts: "build/app/outputs/apk/release/*.apk"
           token: ${{ secrets.TOKEN }}
