--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,8 +2,8 @@ name: Build Android
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
 
 jobs:
   process:
@@ -11,30 +11,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Java JDK
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Flutter action
-        uses: subosito/flutter-action@v2.3.0
+          distribution: 'zulu'
+          java-version: '11'
+      - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
           flutter-version: "2.10.2"
-      # 下载项目依赖
       - run: flutter pub get
       - run: echo $KEYSTORE | base64 -di > android/app/keystore.jks
         env:
           KEYSTORE: ${{ secrets.KEYSTORE }}
-      - run: flutter build apk --release
-        env:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           STORE_FILE: ${{ secrets.STORE_FILE }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
+      - run: flutter test
+      - run: flutter build apk --release
+      - run: flutter build appbundle
       # 发布到 Release
       - name: Release apk
         uses: ncipollo/release-action@v1.9.0
         with:
-          artifacts: "build/app/outputs/apk/release/*.apk"
+          artifacts: "build/app/outputs/apk/release/android.apk"
           token: ${{ secrets.TOKEN }}
