--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -2,7 +2,7 @@ name: Build Web
 on:
   push:
     branches:
-      - master
+      - develop
 jobs:
   build:
     name: Build Web
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v2.3.0
+      - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           flutter-version: "2.10.2"
