--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,17 +41,22 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+       release {
+           keyAlias System.getenv("KEY_ALIAS")
+           storeFile file(System.getenv("STORE_FILE"))
+           storePassword System.getenv("KEYSTORE_PASSWORD")
+           keyPassword System.getenv("KEY_PASSWORD")
+       }
+    }
+
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             // signingConfig signingConfigs.debug
-            signingConfig {
-                keyAlias System.getenv("KEY_ALIAS")
-                storeFile file(System.getenv("STORE_FILE"))
-                storePassword System.getenv("KEYSTORE_PASSWORD")
-                keyPassword System.getenv("KEY_PASSWORD")
-            }
+            signingConfig signingConfigs.release
         }
     }
 }
