--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           KEYSTORE: ${{ secrets.KEYSTORE }}
       - run: flutter test
-      - run: flutter build apk --release
+      - run: flutter build apk --release  --target-platform android-arm
         env:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           STORE_FILE: ${{ secrets.STORE_FILE }}
@@ -35,4 +35,5 @@ jobs:
         uses: ncipollo/release-action@v1.9.0
         with:
           artifacts: "build/app/outputs/apk/release/app-release.apk"
+          prerelease: true
           token: ${{ secrets.TOKEN }}
