--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,13 @@ jobs:
   process:
     name: Build Android
     runs-on: ubuntu-latest
+    env:
+      KEYSTORE: ${{ secrets.KEYSTORE }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      STORE_FILE: ${{ secrets.STORE_FILE }}
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
+      GITHUB_REF: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -18,18 +25,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.2"
-      - run: flutter pub get
-      - run: echo $KEYSTORE | base64 -di > android/app/keystore.jks
-        env:
-          KEYSTORE: ${{ secrets.KEYSTORE }}
-      - run: flutter test
-      - run: flutter build apk --release  --target-platform android-arm
-        env:
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          STORE_FILE: ${{ secrets.STORE_FILE }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-      - run: ls -l build/app/outputs/apk/release/
+      - run: ls -l
+      - run: sh ./scripts/release.sh
       # 发布到 Release
       - name: Release apk
         uses: ncipollo/release-action@v1.9.0
