--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: ls -l
-      - run: sh ./scripts/release.sh
+      - run: bash ./scripts/release.sh
