--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,8 +2,8 @@ name: Build Android
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
 
 jobs:
   process:
@@ -25,12 +25,11 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.2"
-      - run: ls -l
       - run: sh ./scripts/release.sh
       # 发布到 Release
-      - name: Release apk
-        uses: ncipollo/release-action@v1.9.0
-        with:
-          artifacts: "build/app/outputs/apk/release/app-release.apk"
-          prerelease: true
-          token: ${{ secrets.TOKEN }}
+#      - name: Release apk
+#        uses: ncipollo/release-action@v1.9.0
+#        with:
+#          artifacts: "build/app/outputs/apk/release/app-release.apk"
+#          prerelease: true
+#          token: ${{ secrets.TOKEN }}
