--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,7 +15,7 @@ jobs:
       STORE_FILE: ${{ secrets.STORE_FILE }}
       KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
       KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-      GITHUB_REF: 'refs/heads/v0.0.1-rc1'
+      GITHUB_TAG: 'refs/heads/v0.0.1-rc1'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
