--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,8 +2,8 @@ name: Build Android
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - v*
 
 jobs:
   process:
@@ -15,7 +15,7 @@ jobs:
       STORE_FILE: ${{ secrets.STORE_FILE }}
       KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
       KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-      GITHUB_TAG: 'refs/heads/v0.0.1-rc1'
+      GITHUB_TAG: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -27,9 +27,9 @@ jobs:
           flutter-version: "2.10.2"
       - run: sh ./scripts/release.sh
       # 发布到 Release
-#      - name: Release apk
-#        uses: ncipollo/release-action@v1.9.0
-#        with:
-#          artifacts: "build/app/outputs/apk/release/app-release.apk"
-#          prerelease: true
-#          token: ${{ secrets.TOKEN }}
+      - name: Release apk
+        uses: ncipollo/release-action@v1.9.0
+        with:
+          artifacts: "build/app/outputs/apk/release/app-release.apk"
+          prerelease: true
+          token: ${{ secrets.TOKEN }}
