--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,13 +9,6 @@ jobs:
   process:
     name: Build Android
     runs-on: ubuntu-latest
-    env:
-      KEYSTORE: ${{ secrets.KEYSTORE }}
-      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-      STORE_FILE: ${{ secrets.STORE_FILE }}
-      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD}}
-      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-      GITHUB_TAG: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -25,11 +18,12 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "2.10.2"
-      - run: sh ./scripts/release.sh
-      # 发布到 Release
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk --release  --target-platform android-arm
       - name: Release apk
         uses: ncipollo/release-action@v1.9.0
         with:
           artifacts: "build/app/outputs/apk/release/app-release.apk"
-          prerelease: true
           token: ${{ secrets.TOKEN }}
+#          prerelease: true
