--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,13 @@ def signingStoreFile = localProperties.getProperty('signing.storeFile')
 def signingStorePassword = localProperties.getProperty('signing.storePassword')
 def signingKeyPassword = localProperties.getProperty('signing.keyPassword')
 
+println '------------------>'
+println signingKeyAlias
+println signingStoreFile
+println signingStorePassword
+println signingKeyPassword
+println '------------------>'
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
