--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,13 @@
+# 应用信息
+versionCode=1
+versionName=0.0.1
+applicationId=com.lhlyu.buyu
+keyAlias=key
+storeFile=./key.jks
+storePassword=123456
+keyPassword=123456
+
+
 android.useAndroidX=true
 android.enableJetifier=true
 
