--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,7 +3,7 @@ versionCode=1
 versionName=0.0.1
 applicationId=com.lhlyu.buyu
 keyAlias=key
-storeFile=./key.jks
+storeFile=../key.jks
 storePassword=123456
 keyPassword=123456
 
