--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           artifacts: "build/app/outputs/apk/release/app-release.apk"
           token: ${{ secrets.TOKEN }}
-#          prerelease: true
+          prerelease: true
