--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lhlyu.buyu">
    <application
-        android:label="buyu"
+        android:label="不语"
         android:icon="@mipmap/buyu">
         <activity
             android:name=".MainActivity"
