--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,12 +11,22 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    flutterVersionCode = '1'
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    flutterVersionName = '1.0'
+}
+
+
 def propertiesFile = rootProject.file("gradle.properties")
 def properties = new Properties()
 properties.load(new FileInputStream(propertiesFile))
 
-def flutterVersionCode = properties['versionCode']
-def flutterVersionName = properties['versionName']
 def flutterApplicationId = properties['applicationId']
 def signingKeyAlias = properties['keyAlias']
 def signingStoreFile = properties['storeFile']
