--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,8 +2,8 @@ name: Build Android
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
 
 jobs:
   process:
@@ -11,18 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "2.10.2"
-      - run: flutter pub get
-      - run: flutter build apk --release  --target-platform android-arm
-      - name: Release apk
-        uses: ncipollo/release-action@v1.9.0
-        with:
-          artifacts: "build/app/outputs/flutter-apk/app-release.apk"
-          token: ${{ secrets.TOKEN }}
-          prerelease: false
+      - run: echo ${{ GITHUB }}
+      - run: echo ${{ GITHUB.ref }}
+#      - uses: actions/setup-java@v2
+#        with:
+#          distribution: 'zulu'
+#          java-version: '11'
+#      - uses: subosito/flutter-action@v2
+#        with:
+#          flutter-version: "2.10.2"
+#      - run: flutter pub get
+#      - run: flutter build apk --release  --target-platform android-arm
+#      - name: Release apk
+#        uses: ncipollo/release-action@v1.9.0
+#        with:
+#          artifacts: "build/app/outputs/flutter-apk/app-release.apk"
+#          token: ${{ secrets.TOKEN }}
+#          prerelease: false
