--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   get: ^4.6.1
   # 管理网络请求
   dio: ^4.0.4
+  # APP升级
+  r_upgrade: ^0.3.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
