--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: echo ${{ GITHUB }}
-      - run: echo ${{ GITHUB.ref }}
+      - run: echo '${{ toJSON(github) }}'
 #      - uses: actions/setup-java@v2
 #        with:
 #          distribution: 'zulu'
