--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-assets:
- - assets/version.txt
+  assets:
+   - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
